--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,8 @@
 {
     "name": "samuel4x4/samuel4x4.github.io",
-    "type": "library",
     "description": "GitHub personal page",
     "keywords": ["github"],
     "homepage": "http://samuel4x4.github.io/",
-    "license": "MIT",
     "authors": [
         {
             "name": "Samuel Chiriluta",
@@ -14,6 +12,7 @@
         }
     ],
     "require": {
+        "php": ">=5.6.0",
         "nesbot/carbon": "~1.0"
     } 
 }
